# Indie-Studio-Epitech

./: README.md
IndieStudio/: .gitignore  CMakeLists.txt  main.cpp
IndieStudio/ASSETS/BOMB/MODELS/: bomb_000008.mtl
IndieStudio/ASSETS/FIRE/MODELS/: fire_000017.mtl
IndieStudio/ASSETS/PLAYER/MODELS/: bomberman_000008.mtl
IndieStudio/ASSETS/POWER/MODELS/: power_000001.mtl
IndieStudio/ASSETS/WALL/MODELS/: crate_000001.mtl
IndieStudio/SAVE_DIR/: test
IndieStudio/SRCS/: Core.cpp  Core.hpp  Graphic.cpp  Graphic.hpp  Info.cpp  Info.hpp  Save.cpp  Save.hpp  Sound.cpp  Sound.hpp  Window.cpp  Window.hpp
IndieStudio/SRCS/CONTROLLERS/: End.cpp  End.hpp  Game.cpp  Game.hpp  Input.cpp  Input.hpp  Menu.cpp  Menu.hpp  Pause.cpp  Pause.hpp  Settings.cpp  Settings.hpp
IndieStudio/SRCS/ENTITIES/: Object.cpp  Object.hpp  Widget.hpp
IndieStudio/SRCS/ENTITIES/OBJECTS/: Bomb.cpp  Bomb.hpp  Collide.hpp  Crate.cpp  Crate.hpp  Fire.cpp  Fire.hpp  Floor.hpp  Player.cpp  Player.hpp  PowerUp.cpp  PowerUp.hpp  Serialize.cpp  Serialize.hpp  Wall.cpp  Wall.hpp
IndieStudio/SRCS/ENTITIES/WIDGETS/: Button.cpp  Button.hpp  Hud.cpp  Hud.hpp  Text.cpp  Text.hpp
IndieStudio/SRCS/INPUTS/: KeyboardInput.cpp  KeyboardInput.hpp  ManetteInput.cpp  ManetteInput.hpp
IndieStudio/interfaces/: IEntities.hpp  IEntitiesController.hpp  IGraphic.hpp  IInput.hpp  IWindow.hpp  utils.hpp
